        "set_" forms are gone now, since you don't need to specify a state
        when you have a state. Added last_message() and last_result()
        methods to FSA::Rules to get the most recent messages and results
        from the states.
      - Added convenience methods prev_state(), notes(), and done() to the
        state class to reach back into the FSA::Rules object.

0.07  2004-12-16T22:23:43
      - Updated the synopsis to no longer document non-existant methods.
      - Added notes about DFA vs. NFA state engines and how FSA::Rules
        compares to the two models.
      - Added state methods to allow easy caching and retrieval of state
        results and messages. Also added stacktrace methods for easy
        debugging. Implementation by Curtis Poe.

0.06  2004-12-16T02:05:01
      - Added a stack() method to return an arrayref of state transformations.
        Implementation by Curtis Poe.
      - Added reset() which resets the state machine to a pristince state.
        Implementation by Curtis Poe.

0.05  2004-12-16T00:50:49
      - Changed C<try_switch()> to pass any arguments to each rule checking
        code reference. These can be used as inputs in a classic DFA-style
        rule table. Suggested by Paul Hoffman.

0.04  2004-12-16T00:19:41
      - Changed done() to evaluate a code reference if a code reference is
        what is passed to it. Suggested by Curtis Poe.

0.03  2004-12-15T23:45:39
      - Fixed POD for search.cpan.org.

0.02  2004-12-15T22:01:58
      - Changed name to FSA::Rules. Thanks to the module-authors list for the
        feedback!
      - Changed the "enter" and "leave" parameters to "on_enter" and
        "on_exit", respectively. Suggested by Tim Bunce.
      - Changed the check() method to switch() and modified it to return
        the name of the state to which it switched.
      - Added try_switch(), which returns the name of the state to which
        it switched on success, and "undef" on failure.