@@ -20,6 +20,9 @@ Revision history for Perl extension FSA::Rules.
         from the states.
       - Added convenience methods prev_state(), notes(), and done() to the
         state class to reach back into the FSA::Rules object.
+      - The start() method will now throw an exception if the machine is
+        already running. Call reset() before calling start on a running
+        machine.
 
 0.07  2004-12-16T22:23:43
       - Updated the synopsis to no longer document non-existant methods.
